group 'com.finance'
version '1.0-SNAPSHOT'

apply plugin: 'groovy'
apply plugin: 'java'
apply plugin: 'war'
apply plugin: 'idea'

//指定gradle wrapper版本
task wrapper(type: Wrapper) {
    gradleVersion = '2.4.7'
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

ext {
    jvmVersion = "1.8"
    springVersion = "4.3.7.RELEASE"
    sl4jVersion = "1.7.21"

    if (!project.hasProperty("env")) {
        println '没有配置数据环境，默认使用 开发环境'
        env = "dev"

    }
    println "使用数据库环境为:${project['env']}"

}

repositories {
    mavenLocal()
    maven {
        url "http://maven.aliyun.com/mvn/repository/"
    }
    mavenCentral()
}

dependencies {

    // providedCompile在编译时提供，不会写入war
    providedCompile(
            "javax.servlet:javax.servlet-api:3.1.0",
            "javax.servlet.jsp:jsp-api:2.2.1-b03"
    )

    //maven仓库中心没有的jar，则放入libs目录下
    compile fileTree(dir: 'libs', include: ['*.jar'])

    //2.3.11
    compile 'org.codehaus.groovy:groovy-all:2.4.8'
    compile 'mysql:mysql-connector-java:5.1.41'
    compile 'com.alibaba:druid:1.0.25'
    compile 'org.javassist:javassist:3.20.0-GA'
    compile 'javax:javaee-api:7.0'
    compile 'javax.servlet:javax.servlet-api:3.1.0'
    compile 'junit:junit:4.12'
    compile('org.mybatis:mybatis-spring:1.3.0',
            'org.mybatis:mybatis:3.4.1',
            'org.mybatis.generator:mybatis-generator-core:1.3.5')
    compile group: 'tk.mybatis', name: 'mapper', version: '3.3.9'
    compile('commons-pool:commons-pool:1.6',
            'commons-beanutils:commons-beanutils:1.9.2',
            'commons-codec:commons-codec:1.10',
            'commons-io:commons-io:2.5',
            'commons-fileupload:commons-fileupload:1.3.2',
            'org.apache.commons:commons-lang3:3.4',
            'commons-dbcp:commons-dbcp:1.4')
    compile('org.codehaus.jackson:jackson-mapper-asl:1.9.13',
            'com.fasterxml.jackson.core:jackson-databind:2.8.2',
            'com.fasterxml.jackson.core:jackson-annotations:2.8.2',
            'com.fasterxml.jackson.core:jackson-core:2.8.2',
            'com.google.code.gson:gson:2.7',
            'com.alibaba:fastjson:1.2.28')
    compile('org.springframework:spring-core:4.3.7.RELEASE',
            'org.springframework:spring-context:4.3.7.RELEASE',
            'org.springframework:spring-context-support:4.3.7.RELEASE',
            'org.springframework:spring-beans:4.3.7.RELEASE',
            'org.springframework:spring-tx:4.3.7.RELEASE',
            'org.springframework:spring-jdbc:4.3.7.RELEASE',
            'org.springframework:spring-web:4.3.7.RELEASE',
            'org.springframework:spring-webmvc:4.3.7.RELEASE',
            'org.springframework:spring-aop:4.3.7.RELEASE',
            'org.springframework:spring-oxm:4.3.7.RELEASE',
            'org.springframework:spring-test:4.3.7.RELEASE',
            'org.springframework:spring-orm:4.3.7.RELEASE',
            'org.springframework:spring-websocket:4.3.7.RELEASE',
            'org.springframework:spring-messaging:4.3.7.RELEASE',
            'org.springframework.security:spring-security-core:4.2.1.RELEASE',
            'org.springframework:spring-jms:4.3.7.RELEASE')
    compile 'org.springframework.data:spring-data-redis:1.8.0.RELEASE'
    compile('redis.clients:jedis:2.9.0',
            'com.dyuproject.protostuff:protostuff-core:1.0.10',
            'com.dyuproject.protostuff:protostuff-runtime:1.0.10')
    compile('log4j:log4j:1.2.17',
            'org.slf4j:slf4j-api:1.7.25',
            'org.slf4j:slf4j-log4j12:1.7.25')
    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
    compile group: 'commons-io', name: 'commons-io', version: '2.5'
    compile 'com.google.guava:guava:19.0'
    compile group: 'com.googlecode.ehcache-spring-annotations', name: 'ehcache-spring-annotations', version: '1.2.0'
    compile group: 'org.apache.activemq', name: 'activemq-spring', version: '5.14.3'
    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
    compile group: 'org.apache.httpcomponents', name: 'httpasyncclient', version: '4.1.3'


    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.8.1'

    compile group: 'org.jsoup', name: 'jsoup', version: '1.10.2'
    compile('us.codecraft:webmagic-core:0.5.3',
            'us.codecraft:webmagic-extension:0.5.3')
    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.9'
    compile('org.apache.cxf:cxf-core:3.1.7',
            'org.apache.cxf:cxf-rt-transports-http:3.1.7',
            'org.apache.cxf:cxf-rt-frontend-jaxws:3.1.7')
    compile group: 'org.mockito', name: 'mockito-core', version: '2.2.6'

    compile group: 'org.apache.poi', name: 'poi', version: '3.15'
    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.15'
    compile group: 'net.sf.jxls', name: 'jxls-core', version: '1.0.6'

    compile group: 'net.java.dev.jna', name: 'jna-platform', version: '4.2.2'
    compile group: 'net.java.dev.jna', name: 'jna', version: '4.2.2'

    compile group: 'net.sf.ehcache', name: 'ehcache', version: '2.10.3'
    compile group: 'org.mybatis.caches', name: 'mybatis-ehcache', version: '1.1.0'
    compile group: 'com.googlecode.ehcache-spring-annotations', name: 'ehcache-spring-annotations', version: '1.2.0'

    compile group: 'org.wildfly.swarm', name: 'logstash', version: '2016.12.1'
    compile group: 'io.fabric8.devops.apps', name: 'kibana', version: '2.2.298'

    compile group: 'org.elasticsearch', name: 'elasticsearch', version: '5.1.2'

    compile group: 'org.apache.solr', name: 'solr-core', version: '6.4.0'
    compile group: 'org.apache.solr', name: 'solr-solrj', version: '6.4.0'

    compile('org.apache.lucene:lucene-core:6.4.0',
            'org.apache.lucene:lucene-highlighter:6.4.0',
            'org.apache.lucene:lucene-queryparser:6.4.0',
            'org.apache.lucene:lucene-analyzers-common:6.4.0'
    )

    compile group: 'org.jdom', name: 'jdom', version: '2.0.2'
    compile group: 'dom4j', name: 'dom4j', version: '1.6.1'

    compile group: 'org.owasp.esapi', name: 'esapi', version: '2.1.0.1'

    compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.1'
    compile group: 'org.mapstruct', name: 'mapstruct', version: '1.1.0.Final'

//    compile group: 'com.google.code.kaptcha', name: 'kaptcha', version: '2.3'

    testCompile group: 'junit', name: 'junit', version: '4.12'
}

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
        }

        resources {
            srcDir("src/main/resources")
            if (project['env'] == 'dev') {
                srcDir("src/main/resources")
            } else if (project['env'] == 'prod') {
                srcDir('src/main/resources-prod')
            }
        }
    }
}

//配置插件仓库
buildscript {
    repositories {
        mavenLocal()
        maven {
            url "http://maven.aliyun.com/nexus/content/groups/public/"
        }
        mavenCentral()
    }
    dependencies {
        classpath 'org.akhikhl.gretty:gretty:1.2.4'
    }
}

//统一编码为utf-8
[compileJava, compileTestJava, javadoc]*.options*.encoding = "UTF-8"

// 部署war到tomcat的Task
task deploy(dependsOn: war) {
    copy {
        from "build/libs"
        into "G:/Program Files/apache-tomcat-8.0.44/webapps"
        include "*.war"
        rename 'ECMS.*war', 'ECMS.war'
    }
}

task del(dependsOn: deploy) {
    File file = new File("G:/Program Files/apache-tomcat-8.0.44/webapps/ECMS")
    file.deleteDir()
}

tasks.withType(AbstractCompile) {
    options.encoding = "UTF-8"
}
